--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
     <body>
         <main class="parent" id="geral">
             <header class="div1">
-                <a href="home.html"><img height="32px" src="img/logo-ness-text.svg"/></a>
+                <a href="index.html"><img height="32px" src="img/logo-16.png"/></a>
                 <nav>
                     <ul class="menu">
                         <li><a href="#">Sobre</a></li>
@@ -82,6 +82,7 @@
                 <div class="div8">Div 8</div>
             </section>
             <footer class="div9" id="footer">Footer<br>
+                <a href="index.html"><img height="32px" src="img/logo-5.png"/></a><br>
                 <script>
                     window.jQuery(document).ready(function($){
                         var ano = new Date().getFullYear();
