Modificaçoes no corpo

--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
                 <nav>
                     <ul class="menu">
                         <li><a href="#">Sobre</a></li>
-                        <li><a href="#">Resumir</a></li>
+                        <li><a href="#">Meu IMC</a></li>
                         <li><a href="#">Tutorial</a></li>
                         <li><a href="#footer">Contatos</a></li>
                     </ul>
@@ -40,12 +40,26 @@
             </header>
             <div class="div2">Ads 1</div>
             <section class="div3">
-                Título da seção aqui!
-                <div class="div4">Div 4
-                    <h2>What is Lorem Ipsum?</h2><br>
-                    <p>Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book. It has survived not only five centuries, but also the leap into electronic typesetting, remaining essentially unchanged. It was popularised in the 1960s with the release of Letraset sheets containing Lorem Ipsum passages, and more recently with desktop publishing software like Aldus PageMaker including versions of Lorem Ipsum.</p>
+                <div id="principal">
+                <h1>Calculadora do Índice de Massa Corporal</h1>
+                <p>
+                    There are many variations of passages of Lorem Ipsum available, but the majority have suffered alteration in some form, by injected humour, or randomised words which don't look even slightly believable. If you are going to use a passage of Lorem Ipsum, you need to be sure there isn't anything embarrassing hidden in the middle of text. All the Lorem Ipsum generators on the Internet tend to repeat predefined chunks as necessary, making this the first true generator on the Internet. It uses a dictionary of over 200 Latin words, combined with a handful of model sentence structures, to generate Lorem Ipsum which looks reasonable. The generated Lorem Ipsum is therefore always free from repetition, injected humour, or non-characteristic words etc.
+                </p>
                 </div>
-                <div class="div5">Div 5</div>
+                <div class="div4">Div 4
+                    <div>
+                        <h2>What is Lorem Ipsum?</h2><br>
+                        <p>Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book. It has survived not only five centuries, but also the leap into electronic typesetting, remaining essentially unchanged. It was popularised in the 1960s with the release of Letraset sheets containing Lorem Ipsum passages, and more recently with desktop publishing software like Aldus PageMaker including versions of Lorem Ipsum.</p>
+                    </div>
+                </div>
+                <div class="div5">Div 5
+                    <div>
+                        <h1>Calculadora do Índice de Massa Corporal</h1>
+                        <p>
+                            There are many variations of passages of Lorem Ipsum available, but the majority have suffered alteration in some form, by injected humour, or randomised words which don't look even slightly believable. If you are going to use a passage of Lorem Ipsum, you need to be sure there isn't anything embarrassing hidden in the middle of text. All the Lorem Ipsum generators on the Internet tend to repeat predefined chunks as necessary, making this the first true generator on the Internet. It uses a dictionary of over 200 Latin words, combined with a handful of model sentence structures, to generate Lorem Ipsum which looks reasonable. The generated Lorem Ipsum is therefore always free from repetition, injected humour, or non-characteristic words etc.
+                        </p>
+                    </div>
+                </div>
                 <div class="div6">Div6
                     <div class="conteudo">
                     <form method="#">
@@ -79,17 +93,57 @@
                     Seu IMC:
                 </div>
                 <div class="div7">Ads 2</div>
-                <div class="div8">Div 8</div>
+                <div class="div8">Div 8
+                    <div>
+                        <h1>Calculadora do Índice de Massa Corporal</h1>
+                        <p>
+                            There are many variations of passages of Lorem Ipsum available, but the majority have suffered alteration in some form, by injected humour, or randomised words which don't look even slightly believable. If you are going to use a passage of Lorem Ipsum, you need to be sure there isn't anything embarrassing hidden in the middle of text. All the Lorem Ipsum generators on the Internet tend to repeat predefined chunks as necessary, making this the first true generator on the Internet. It uses a dictionary of over 200 Latin words, combined with a handful of model sentence structures, to generate Lorem Ipsum which looks reasonable. The generated Lorem Ipsum is therefore always free from repetition, injected humour, or non-characteristic words etc.
+                        </p>
+                    </div>
+                </div>
             </section>
-            <footer class="div9" id="footer">Footer<br>
-                <a href="index.html"><img height="32px" src="img/logo-5.png"/></a><br>
+            <footer class="div9" id="footer">
+                <div id="rodapegeral">
+                    <div id="endereco">
+                        <a href="index.html"><img height="60px" src="img/logo-5.png"/></a>
+                        <p>
+                            Avenida Floriano Peixoto, nº 617<br>
+                            Centro, Novo Lino - Alagoas<br>
+                            Cep 57.970-000
+                        </p>
+                    </div>
+                    <nav id="mapa">
+                        <h3>Mapa do site</h3><br>
+                        <ul class="#">
+                            <li><a href="#">Sobre</a></li><br>
+                            <li><a href="#">Meu IMC</a></li><br>
+                            <li><a href="#">Tutorial</a></li><br>
+                            <li><a href="#footer">Contatos</a></li>
+                        </ul>
+                    </nav>
+                    <div id="contatos">
+                        <h3>Contatos</h3><br>
+                        <p>
+                            deivinsonseverino@gmail.com<br><br>
+                            (82) 9 9180-1663<br><br>
+                            Política de privacidade
+                        </p>
+                    </div>
+                    <div id="redes-sociais">
+                        <h3>Redes Sociais</h3><br>
+                        <a href="#"><img height="30px" src="img/whats.png"/></a>
+                        <a href="#"><img height="30px" src="img/linkedin.png"/></a>
+                        <a href="#"><img height="30px" src="img/google.png"/></a>
+                        <a href="#"><img height="30px" src="img/face.png"/></a>
+                    </div>
+                </div>
                 <script>
                     window.jQuery(document).ready(function($){
                         var ano = new Date().getFullYear();
                         $('.ano').text(ano);
                     });
-                    </script>
-                    Todos os direitos reservados ® 2019 - <span class='ano'></span> Lino Processos e Tecnologia
+                </script>
+                <div id="direitos">Todos os direitos reservados ® 2019 - <span class='ano'></span> Lino Processos e Tecnologia. CNPJ: 33.725.658/0001-10</div>
             </footer>
         </main>
     </body>
